--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="A single page application to support connecting constituents with their elected representatives.">
     <meta name="author" content="Cole Brown">
 
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="styles/main.css">
     <meta name="theme-color" content="">
 </head>
 
@@ -70,6 +70,7 @@
         <p>Copyright 2021</p>
     </footer>
 
-    <script src="main.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="scripts/main.min.js"></script>
 </body>
 </html>
