--- a/src/index.html
+++ b/src/index.html
@@ -42,26 +42,11 @@
                 <input type="text" id="postal_code" name="postal_code">
 
                 <input type="submit" value="Connect" class="btn btn--primary">
-
             </form>
         </section>
 
-        <section class="page-section page-section--contact">
-            <div class="card card--representative" itemscope itemtype="https://schema.org/Person">
-                <img src="{{ image }}" itemprop="image" alt="Official portrait for {{ full_name }}">
+        <section class="page-section page-section--contact js-form-response">
 
-                <dl>
-                    <dt>Name</dt>
-                    <dd itemprop="name">{{ full_name }}</dd>
-                    <dt>Riding</dt>
-                    <dd itemprop="workLocation">{{ riding_location }}</dd>
-                    <dt>Party</dt>
-                    <dd itemprop="memberOf">{{ party_affiliation }}</dd>
-                </dl>
-
-                <a href="mailto:{{ email_address }}" class="btn btn--primary">Email your MP</a>
-                <a href="tel:{{ phone_number }}" class="btn">Email your MP</a>
-            </div>
         </section>
 
     </main>
@@ -71,6 +56,25 @@
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js" async></script>
     <script src="scripts/main.min.js"></script>
+
+    <script id="representative-card" type="text/x-handlebars-template">
+        <div class="card card--representative" itemscope itemtype="https://schema.org/Person">
+            <img src="{{ image }}" itemprop="image" alt="Official portrait for {{ full_name }}">
+
+            <dl>
+                <dt>Name</dt>
+                <dd itemprop="name">{{ full_name }}</dd>
+                <dt>Riding</dt>
+                <dd itemprop="workLocation">{{ riding_location }}</dd>
+                <dt>Party</dt>
+                <dd itemprop="memberOf">{{ party_affiliation }}</dd>
+            </dl>
+
+            <a href="mailto:{{ email_address }}" class="btn btn--primary">Email your MP</a>
+            <a href="tel:{{ phone_number }}" class="btn">Email your MP</a>
+        </div>
+    </script>
 </body>
 </html>
