--- a/src/index.html
+++ b/src/index.html
@@ -15,45 +15,47 @@
 </head>
 
 <body>
-    <header role="banner" class="header">
-        <nav role="navigation" class="nav nav--breadcrumbs">
-            <ol>
-                <li>Step one</li>
-                <li>Step two</li>
-            </ol>
-        </nav>
-    </header>
+    <div class="site-layout site-layout--one-column">
+        <header role="banner" class="header">
+            <nav role="navigation" class="nav nav--breadcrumbs">
+                <ol>
+                    <li>Step one</li>
+                    <li>Step two</li>
+                </ol>
+            </nav>
+        </header>
 
-    <main role="main" class="main">
-        <h1>Connet with your MP</h1>
+        <main role="main" class="main">
+            <h1>Connet with your MP</h1>
 
-        <section class="page-section page-section--form">
-            <form>
-                <label for="first_name">First name</label>
-                <input type="text" id="first_name" name="first_name">
+            <section class="page-section page-section--form">
+                <form>
+                    <label for="first_name">First name</label>
+                    <input type="text" id="first_name" name="first_name">
 
-                <label for="last_name">Last name</label>
-                <input type="text" id="last_name" name="last_name">
+                    <label for="last_name">Last name</label>
+                    <input type="text" id="last_name" name="last_name">
 
-                <label for="email">Email address</label>
-                <input type="email" id="email" name="email">
+                    <label for="email">Email address</label>
+                    <input type="email" id="email" name="email">
 
-                <label for="postal_code">Postal code</label>
-                <input type="text" id="postal_code" name="postal_code">
+                    <label for="postal_code">Postal code</label>
+                    <input type="text" id="postal_code" name="postal_code">
 
-                <input type="submit" value="Connect" class="btn btn--primary">
-            </form>
-        </section>
+                    <input type="submit" value="Connect" class="btn btn--primary">
+                </form>
+            </section>
 
-        <section class="page-section page-section--contact js-form-response">
+            <section class="page-section page-section--contact js-form-response">
 
-        </section>
+            </section>
 
-    </main>
+        </main>
 
-    <footer>
-        <p>Copyright 2021</p>
-    </footer>
+        <footer>
+            <p>Copyright 2021</p>
+        </footer>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js" async></script>
