Added the initial typographical styles

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,10 @@
     <meta name="description" content="A single page application to support connecting constituents with their elected representatives.">
     <meta name="author" content="Cole Brown">
 
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://code.jquery.com/">
+
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,700;1,300&family=Roboto+Slab:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/main.css">
     <meta name="theme-color" content="">
 </head>
@@ -26,7 +30,7 @@
         </header>
 
         <main role="main" class="main">
-            <h1>Connet with your MP</h1>
+            <h1>Connect with your MP</h1>
 
             <section class="page-section page-section--form">
                 <form>
