Introduced colour palette; refined styles; improved responsiveness

--- a/src/index.html
+++ b/src/index.html
@@ -21,20 +21,13 @@
 <body>
     <div class="site-layout site-layout--one-column">
         <header role="banner" class="header">
-            <nav role="navigation" class="nav nav--breadcrumbs">
-                <ol>
-                    <li>Step one</li>
-                    <li>Step two</li>
-                </ol>
-            </nav>
+            <section class="page-section page-section--header">
+                <h1>Connect with your MP</h1>
+                <p class="lead">Connect with your political representatives on issues that matter to you.</p>
+            </section>
         </header>
 
         <main role="main" class="main">
-            <section class="page-section page-section--header">
-                <h1>Connect with your MP</h1>
-                <p>Connect with your political representatives on issues that matter to you.</p>
-            </section>
-
             <section class="page-section page-section--form">
                 <form class="form">
                     <div class="form__item">
@@ -64,7 +57,6 @@
             <section class="page-section page-section--contact js-form-response">
 
             </section>
-
         </main>
 
         <footer>
