Micro commit from after break for timing; headings added

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,8 @@
 
         <main role="main" class="main">
             <section class="page-section page-section--form">
+                <h2 class="page-section__title">Your information</h2>
+
                 <form class="form">
                     <div class="form__item">
                         <label for="first_name" class="form__label">First name</label>
@@ -55,7 +57,7 @@
             </section>
 
             <section class="page-section page-section--contact js-form-response">
-
+                <h2 class="page-section__title">Your representative</h2>
             </section>
         </main>
 
