--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
         <header role="banner" class="header">
             <section class="page-section page-section--header">
                 <h1>Connect with your MP</h1>
-                <p class="lead">Connect with your political representatives on issues that matter to you.</p>
+                <p class="lead">Connect with your local political representatives on issues that matter to you.</p>
             </section>
         </header>
 
@@ -60,7 +60,7 @@
             </section>
         </main>
 
-        <footer>
+        <footer class="page-section page-section--footer">
             <small>Copyright © 2021</small>
         </footer>
     </div>
